--- a/server/server/Makefile.server
+++ b/server/server/Makefile.server
@@ -1,8 +1,8 @@
 CC		= g++
 CFLAGS		= -c -Wall -std=c++11
 LDFLAGS		= -lpthread
-SOURCES		= server.cpp ../threads/thread.cpp ../tcpsockets/tcpacceptor.cpp ../tcpsockets/tcpstream.cpp
-INCLUDES	= -I../threads -I../wqueue -I../tcpsockets
+SOURCES		= server.cpp ../threads/thread.cpp ../tcpsockets/tcpacceptor.cpp ../tcpsockets/tcpstream.cpp ../message_queue/queue.cpp
+INCLUDES	= -I../threads -I../wqueue -I../tcpsockets -I../message_queue
 OBJECTS		= $(SOURCES:.cpp=.o)
 TARGET		= server
 
